upgrade to tomcat 10 and jdk 17
upgrade to tomcat 10 and jdk 17